--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
 /*
  * Estilos de tu proyecto
  */
+ #Menu{
+   margin:-8px;
+   position: absolute;
+ }
+
+#Menu .logo-pink.png{
+  background-size: 200px;
+
+  }
