--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,344 @@
 /*
  * Estilos de tu proyecto
  */
- #Menu{
-   margin:-8px;
-   position: absolute;
+
+ body{
+    font-family: 'Montserrat', sans-serif;
+
  }
 
-#Menu .logo-pink.png{
-  background-size: 200px;
+ body .hero{
+  position: absolute;
+  margin-left: -8px;
+  margin-top: -120px;
+  width: 1349px;
+  z-index: -1;
+}
 
-  }
+body .logo_white{
+  position:relative;
+  height: 43px;
+  width: 64px;
+  margin-left:72px;
+  margin-top: 35px;
+}
+
+/* IDEA: menu fijo
+
+#Menu{
+  margin:-8px;
+  background-color: white;
+  position: fixed;
+  width: 1349px;
+  height: 113px;
+}
+
+#Menu .logo-pink{
+  position: absolute;
+  height: 43px;
+  width: 64px;
+  margin-left:72px;
+  margin-top: 35px;
+} */
+
+#Menu ul{
+  position:absolute;
+  list-style: none;
+  font-size: 19px;
+  right: 235px;
+  top:32px;
+  /*background-color: red;*/
+}
+
+#Menu li{
+  position:relative;
+  width: 105px;
+  float: left;
+}
+
+.fa-angle-down{
+  position: absolute;
+  top: 4px;
+  right: 10px;
+}
+
+#Menu a{
+  text-decoration: none;
+  /*display: block;*/
+  color: white;
+  margin-right:0px;
+}
+
+#Menu a:hover{
+  color: #FF00BF;
+}
+
+#Menu .log_in{
+  font-size: 19px;
+  color: white;
+  width: 70px;
+  height: 30px;
+  position: absolute;
+  text-align: center;
+  left:1100px;
+  padding: 6px;
+  top:45px;
+  background:transparent;
+  outline: 1px solid white;
+}
+
+
+#Etiqueta{
+  margin: 0px;
+  position:relative;
+  width: 560px;
+  height: 420px;
+  background-color: white;
+  /*left:1000px;*/
+  top: -5px;
+  margin-left:780px;
+}
+
+#Etiqueta h1{
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  font-size: 40px;
+  /*background-color: red;*/
+  width: 300px;
+  text-align: left;
+  color:#352384;
+  position: relative;
+  margin-left:68px;
+  top: 48px;
+}
+
+#Etiqueta h5{
+  font-family: 'Montserrat';
+  font-size: 15px;
+  text-transform: uppercase;
+  width: 300px;
+  /*background-color: red;*/
+  text-align: left;
+  color:#352384;
+  position: relative;
+  margin-left:68px;
+  top: 25px;
+}
+
+#Etiqueta .formulario{
+  position: absolute;
+  /*background-color: red;*/
+  top: 200px;
+  margin-left: 68px;
+  width: 450px;
+  height: 30px;
+  border-left: transparent;
+  border-top: transparent;
+  border-right: transparent;
+  border-bottom: 1px solid black;
+  font-size: 18px;
+  outline-color: white;
+}
+
+#Etiqueta .become{
+  background-color:#FB00AD;
+  font-size: 17px;
+  font-family:sans-serif;
+  color: white;
+  position: absolute;
+  text-decoration: none;
+  text-align: center;
+  padding: 15px;
+  width: 150px;
+  border-radius: 7px;
+  margin-top: 75px;
+  margin-left: 68px;
+}
+
+#Etiqueta .sig{
+  /*background-color: pink;*/
+  font-size: 17px;
+  font-family:sans-serif;
+  color: linear-gradient(#76278F, #2B1E66);
+  position: absolute;
+  text-align: center;
+  padding: 15px;
+  width: 150px;
+  border-radius: 7px;
+  margin-top: 75px;
+  margin-left: 260px;
+}
+
+#Etiqueta ul{
+  position: absolute;
+  color: linear-gradient(#76278F, #2B1E66);
+  list-style: none;
+  font-size: 10px;
+  margin-top: 150px;
+  margin-left: 30px;
+  line-height: 20px;
+}
+
+#Etiqueta ul li .check{
+  color:#FB00AD;
+}
+
+#Phone{
+  position: absolute;
+  top:620px;
+  margin-left:-10px;
+  width: 1351px;
+  height: 600px;
+  /*border: 2px solid black;*/
+  background:linear-gradient(#76278F, #2B1E66)
+}
+
+#Phone .uno .dos .tres, h3{
+  position: relative;
+  font-weight:300;
+  text-transform: uppercase;
+  color: white;
+  font-size: 30px;
+  margin-left: 160px;
+  bottom:30px;
+  line-height: 70px;
+}
+
+#Phone .tres h3{
+  width: 300px;
+  line-height: 40px;
+}
+
+#Phone .uno .dos .tres, p{
+  position: relative;
+  color: white;
+  margin-left: 160px;
+  width: 450px;
+  bottom: 60px;
+  line-height: 27px;
+}
+
+#Phone .phone_img{
+  position: absolute;
+  margin-left: 700px;
+  bottom: 65px;
+  width: 500px;
+}
+
+#videos{
+  position: absolute;
+  top:1220px;
+  margin-left:-10px;
+  width: 1351px;
+  height: 1440px;
+  /*border: 2px solid black;*/
+ /*background:red;*/
+}
+
+#Videos .video1, h6, h1, h5{
+  position: relative;
+  left: 65px;
+  width: 345px;
+  font-family: 'Montserrat';
+}
+
+.video1 h6, h1{
+  text-transform: uppercase;
+}
+
+.video1 ul {
+  list-style: none;
+  position: relative;
+  bottom: 200px;
+}
+
+.video1 ul li .iframe1{
+  margin-left: 457px;
+}
+
+.video2, h5 h1 h6{
+  position: relative;
+  font-size: 20px;
+  margin-left: 830px;
+  bottom: 200px;
+  font-family: 'Montserrat';
+}
+
+.video2 ul{
+  list-style: none;
+  position:relative;
+}
+
+.video2 ul li .iframe2{
+  bottom: 243px;
+  position: relative;
+  right:868px;
+}
+
+.video3, h6 h1 h5{
+  position: relative;
+  font-size: 19px;
+  bottom:470px;
+  left: 10px;
+  width: 345px;
+  font-family: 'Montserrat';
+}
+
+.video3 ul{
+  list-style: none;
+  position: absolute;
+
+}
+
+.video3 ul li .iframe3{
+margin-left: 447px;
+position: relative;
+bottom: 235px;
+}
+
+#Learn{
+  position: absolute;
+  /*background-color: black;*/
+  margin-top: 2117px;
+  margin-left: -8px;
+  margin-right: -8px;
+  padding: 0px;
+  height: 400px;
+  width: 1349px;
+}
+
+#Learn a{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'Montserrat',sans-serif;
+  position: absolute;
+  top: 150px;
+  left: 50px;
+  color: #FF00BF;
+}
+
+#Learn a:hover{
+  text-decoration:underline;
+}
+
+#Learn h1{
+  position: absolute;
+  top: 180px;
+  left: 50px;
+  color: #333447;
+}
+
+#Learn p{
+  position: absolute;
+  top: 230px;
+  right:  850px;
+  color: #333447;
+}
+
+#Learn .heart{
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 854px;
+  height: 480px;
+}
